[package]
authors = ["ChiHai <ihciah@gmail.com>", "Rain <rain-jiang@outlook.com>"]
description = "Monoio Transporter."
edition = "2021"
license = "MIT/Apache-2.0"
name = "monoio-transports"
version = "0.5.2"

[dependencies]
monoio = "0.2.3"
monoio-compat = "0.2.1"
service-async = "0.2.0"
monoio-rustls = "0.4.0"
monoio-http = "0.3.8"
monoio-codec = "0.3.1"
monoio-native-tls = { version = "0.4.0", optional = true, features = ["alpn"] }
bytes = "1"
http = "1.0"
local-sync = "0.1"
thiserror = "1"

serde = "1"
serde_json = "1"
smol_str = "0.2"

rustls = { version = "~0.23.4"}
webpki-roots = "~0.26.1"
native-tls = { version = "0.2", optional = true }

tracing = { version = "0.1", optional = true }

hyper = { version = "1.1", features = [
    "http1",
    "client",
    "http2",
], optional = true }
pin-project-lite = { version = "0.2", optional = true }
# TODO: impl async mutex in local-sync and replace here.
tokio = { version = "1", default-features = false, features = [
    "sync",
], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
http-body-util = "0.1"
h2 = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["time"]
# Enable this feature to make connection pool periodically checking works.
# You must enable time driver to use it.
time = []

hyper = [
    "dep:hyper",
    "dep:pin-project-lite",
    "dep:tokio",
    "monoio/poll-io",
    "monoio-compat/hyper",
]

# Note: rustls and native-tls cannot be enabled at the same time
rustls-unsafe-io = ["monoio-rustls/unsafe_io"]
native-tls = ["dep:native-tls", "monoio-native-tls"]
logging = ["tracing", "monoio-rustls/logging"]
